--- a/learnerlang.ipynb
+++ b/learnerlang.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "learnerlang.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPOCmLVVLagJoAcv9raOWLO",
+      "authorship_tag": "ABX9TyPDe0EHBqtLDKcVR0igYTaP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,32 +35,44 @@
       "source": [
         "メモ\n",
         "\n",
-        "* erlang を少し齧る\n",
-        "* まだ環境設定中\n",
-        "* erlang は erl shell 上で開発するらしいが、それでは"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "d9ZZBIG7FRK3"
-      },
-      "source": [
-        "---\n"
+        "* erlang を齧る\n",
+        "* erlang のテキストでは erl shell を使っているが、colab 上では不便なので\n",
+        "* erl -eval を使うか escript を使う\n",
+        "\n",
+        "参考サイト\n",
+        "\n",
+        "* https://learnyousomeerlang.com/\n",
+        "* https://erlang.org/doc/getting_started/users_guide.html\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "62anOgDUY2SB"
+        "id": "62anOgDUY2SB",
+        "outputId": "6d815125-dcd6-489b-fdb0-bda7dfd1948e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!sudo rm -f /usr/local/lib/python3.7/dist-packages/ideep4py/lib/libmkldnn.so.0\n",
         "!sudo ln -s /usr/local/lib/python3.7/dist-packages/ideep4py/lib/libmkldnn.so /usr/local/lib/python3.7/dist-packages/ideep4py/lib/libmkldnn.so.0\n",
         "!sudo apt install erlang"
       ],
-      "execution_count": 2,
-      "outputs": []
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Reading package lists... Done\n",
+            "Building dependency tree       \n",
+            "Reading state information... Done\n",
+            "erlang is already the newest version (1:20.2.2+dfsg-1ubuntu2).\n",
+            "0 upgraded, 0 newly installed, 0 to remove and 39 not upgraded.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -69,12 +81,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "i8bT4ON0Z9Jx",
-        "outputId": "aec89724-024f-4cc9-c79d-631f6f1fb09f"
+        "outputId": "2c73b01b-21bf-4dc9-92ee-7b1718eeef58"
       },
       "source": [
+        "# erlang のバージョン番号を知る方法に次のような答えがあった\n",
         "!erl -eval 'erlang:display(erlang:system_info(otp_release)), halt().'  -noshell"
       ],
-      "execution_count": 12,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -88,21 +101,120 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rCsFsdWcA7yA",
-        "outputId": "f4925555-f0ed-40e6-e5ae-28f6e27462cb",
+        "id": "hcOf0uFCWlfI",
+        "outputId": "2a93f0fb-5e57-49ec-ef92-a42458692317",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "!erl -eval 'erlang:display(\"hello erlang\"),halt().' -noshell"
+        "# 参考 erl --version では erl shell が立ち上がってしまう\n",
+        "!erl -version"
       ],
-      "execution_count": 39,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "\"hello\"\r\n"
+            "Erlang (SMP,ASYNC_THREADS) (BEAM) emulator version 9.2\r\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rCsFsdWcA7yA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "048eeb7a-f29a-41ee-e713-1b93e8a3d5c2"
+      },
+      "source": [
+        "# 実験\n",
+        "!erl -eval 'erlang:display(\"hello erlang\"),halt().' -noshell #=> \"hello erlang\"\n",
+        "!erl -eval 'erlang:display(3+7),halt().' -noshell #=> 10"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\"hello erlang\"\n",
+            "10\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "brhH5ZWTUElG",
+        "outputId": "a5041255-96c3-4411-9862-bdd5a0d97be3"
+      },
+      "source": [
+        "!erl -boot start_clean -noshell -eval 'io:fwrite(\"Hello, world.~n\")' -s init stop"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hello, world.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-RYCjtmDVhTU",
+        "outputId": "0dd27253-fa2c-452f-83da-470814d71879"
+      },
+      "source": [
+        "# 次のようなのが Erlang実験室：コマンドラインから使うerl という記事にあった。 檜山正幸\n",
+        "!erl -boot start_clean -noshell -eval 'io:fwrite(\"Hello, world.~n\")' -s init stop\n",
+        "!erl -boot start_clean -noshell -eval 'io:fwrite(\"~p~n\",[12345*12345*12345])' -s init stop"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hello, world.\n",
+            "1881365963625\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JzoZysLcVipT",
+        "outputId": "8788066f-816c-4964-895b-0504baeda8f8"
+      },
+      "source": [
+        "!erl -boot start_clean -noshell -eval 'io:fwrite(\"~p~n\",[12345*12345*12345])' -s init stop"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1881365963625\n"
           ],
           "name": "stdout"
         }
