--- a/svg01.ipynb
+++ b/svg01.ipynb
@@ -6,7 +6,7 @@
       "name": "svg01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMsnBYtEH1roaJR/gKZnkVc",
+      "authorship_tag": "ABX9TyNo3qad++e6mO//j3EQ7hps",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,9 +71,17 @@
         "\n",
         "タグは `<svg></svg>` である。 \n",
         "\n",
+        "`<svg>` オープンタグには次のような事が書かれる。\n",
+        "\n",
         "`<svg viewBox=\"0 0 300 300\" width=\"100px\" height=\"100px\" xmlns=\"http://www.w3.org/2000/svg\">`\n",
         "\n",
-        "ということは xmlns (xmlネームスペース) を指定する。 width, height は html 上での描画エリアの指定。 viewBox で対象のどの部分を描画するかを決める。"
+        "ということは xmlns (xmlネームスペース) を指定する。 width, height は html 上での描画エリアの指定。 viewBox で対象のどの部分を描画するかを決める。\n",
+        "\n",
+        "viewBox の値と width, height の値の関係で width, height の中のどの位置に描かれるかが決まる。ちょっと複雑で直感的ではない。\n",
+        "\n",
+        "svgタグには、何も指定しなくてもデフォルトで、preserveAspectRatio=\"xMidYMid meet\"が指定されている、とのこと。\n",
+        "\n",
+        "viewPort という言葉もある。width, height での描画エリアのことと理解している。"
       ]
     },
     {
@@ -152,7 +160,7 @@
         "  <circle cx=\"100\" cy=\"100\" r=\"80\" stroke=\"green\" stroke-width=\"8\" fill=\"yellow\" />\n",
         "</svg>"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
