Colaboratory を使用して作成しました

--- a/learnpython.ipynb
+++ b/learnpython.ipynb
@@ -6,7 +6,7 @@
       "name": "learnpython.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNTLWkEShC0TDi8yKXjC84F",
+      "authorship_tag": "ABX9TyMqhh7Z0fEa9NjbryvHe+WI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,33 +60,33 @@
       "metadata": {
         "id": "6A6tdrr07dUT",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 138
         },
-        "outputId": "fbb9c666-8d2f-4053-ed5c-2c72fa9e036c"
+        "outputId": "65ad60e9-4721-4a13-ccb3-63574a2b56e3"
       },
       "source": [
         "# 最初の例\n",
         "x = 0\n",
-        "print(x)\n",
+        "print(x) # 括弧は必須\n",
         "\n",
-        "x = x + 4\n",
+        "x = x + 4 # functional ではないのでこのように書けるがこれでよいのか\n",
         "\n",
-        "if x > 0:\n",
-        "    print(\"x is larger than 0\")\n",
+        "if x > 0: # コロンが必要、インデントが必要 IndentationError <= camelCase\n",
+        "    print(\"x is larger than 0\") # 行末の改行は自動で入る\n",
         "\n",
         "text = \"hello \" * x\n",
         "print(text)"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "0\n",
-            "x is larger than 0\n",
-            "hello hello hello hello \n"
-          ],
-          "name": "stdout"
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-83e5b70bd9c1>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    print(\"x is larger than 0\") # 行末の改行は自動で入る\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+          ]
         }
       ]
     },
@@ -163,7 +163,16 @@
         "* 型の名前: int, float, bool, str とか。\n",
         "* print は改行が自動で入る。\n",
         "* bool は True, False で小文字にするとエラーになる。\n",
-        "* True, False 以外はなにが True になりなにが False になるのか。 => 課題 真偽の値。\n"
+        "* True, False 以外はなにが True になりなにが False になるのか。 => 課題 真偽の値。=> python 真偽値 で検索\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yMeNR-2d4P0S"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
@@ -7351,7 +7360,7 @@
       "source": [
         "0.5.as_integer_ratio()"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7462,7 +7471,7 @@
         "x = numpy.asarray([[1,2],[3,4]])\n",
         "x[:,0]"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7536,7 +7545,7 @@
         "    message = '{}番目: {}さん'.format(i, name)\n",
         "    print(message)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7562,7 +7571,7 @@
         "# 実験\n",
         "print(list(enumerate(names)))"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8749,7 +8758,7 @@
         "\n",
         "print(list(filter(lambda x: abs(x) > 3, numbers))) #[-8, 5, 4, -9]"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8801,7 +8810,7 @@
         "print(type(np.arange(10)))\n",
         "print(type(range(10)))"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8888,7 +8897,7 @@
         "print(reduce(lambda a, b: a + b, np.array([[1,2,3], [4,5,6]]))) # flatten にならない\n",
         "print(reduce(lambda a, b: a + b, np.array([[1,2,3],[4,5,6],[7,8,9]]))) # flatten にならない\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8991,7 +9000,7 @@
         "print(next(it))\n",
         "# print(next(it)) StopIteration エラー"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9460,7 +9469,7 @@
         "print(list(itertools.islice(itertools.count(10, 5), 10)))\n",
         "\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9539,7 +9548,7 @@
       "source": [
         "itertools.tee?"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9556,7 +9565,7 @@
         "\n",
         "itertools.tee( itertools.count() )\n"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
