Colaboratory を使用して作成しました

--- a/svg01.ipynb
+++ b/svg01.ipynb
@@ -6,7 +6,7 @@
       "name": "svg01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOmy/P+5jhb6PtbA4+Tzo4r",
+      "authorship_tag": "ABX9TyOivUfz90r+CBSSKl7Ge2MO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2350,11 +2350,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "YO8pQr8H6oq_",
-        "outputId": "dd8e43f0-b01d-4c70-a0ab-127c4eebaaf5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 421
-        }
+        },
+        "outputId": "dd8e43f0-b01d-4c70-a0ab-127c4eebaaf5"
       },
       "source": [
         "%%html\n",
@@ -2365,7 +2365,7 @@
         "  </rect>\n",
         "</svg>\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2419,7 +2419,7 @@
         "  Sorry, your browser does not support inline SVG.\n",
         "</svg>\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2480,7 +2480,7 @@
         "  Sorry, your browser does not support inline SVG.  \n",
         "</svg>\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2539,7 +2539,7 @@
         "  Sorry, your browser does not support inline SVG.  \n",
         "</svg>\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2597,7 +2597,7 @@
         "  Sorry, your browser does not support inline SVG.\n",
         "</svg>"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2667,7 +2667,7 @@
         "  </g>\n",
         "</svg>\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2737,7 +2737,7 @@
         "    <div class=\"box\">BOX</div>\n",
         "</div>"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3386,6 +3386,15 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mzmpoynI_sPz"
+      },
+      "source": [
+        "# inkscape を使う"
       ]
     },
     {
