Colaboratory を使用して作成しました

--- a/learnlatex.ipynb
+++ b/learnlatex.ipynb
@@ -66,7 +66,8 @@
         "\n",
         "colab でテキストセル内で &dollar; マークを使うと数式を latex で処理して美しく表示できる。\n",
         "$$ \\int f(x)dx $$\n",
-        "```$$ \\int f(x)dx $$```\n"
+        "これは\n",
+        "```$$ \\int f(x)dx $$``` と書いたもの。\n"
       ]
     },
     {
@@ -198,8 +199,9 @@
         "# 編集モードにしなくても latex 表記ができるので latex の学習には便利\n",
         "# コードセルを実行しないと数式表記にならない。\n",
         "# コードセルの実行はセルの左の実行ボタン(右向き三角)を押すか、Ctrl+Enter を押す。\n",
-        "# x = 3 の数字を変えて実行してみる。\n",
+        "\n",
         "%%latex\n",
+        "\n",
         "x = 3"
       ],
       "execution_count": null,
@@ -230,7 +232,7 @@
       },
       "source": [
         "# 実験 python プログラムで表示することもできる。このノートブックでは学習対象としない\n",
-        "# 別途 sympy を学習する\n",
+        "# 別途 sympy で学習する\n",
         "from sympy import *\n",
         "from IPython.display import Markdown\n",
         "display(Markdown(\"実験学習 $x = 3$ と書く\"))\n",
