Colaboratory を使用して作成しました

--- a/svg01.ipynb
+++ b/svg01.ipynb
@@ -6,7 +6,7 @@
       "name": "svg01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMnf/crYRTzX6DokCYiAhOa",
+      "authorship_tag": "ABX9TyMRqtqqvpVwZxOL+w67uxZ9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -442,7 +442,7 @@
       "source": [
         "stroke-widthの幅を広くすると、上と左が半分欠ける。\n",
         "\n",
-        "属性はバラバラにも書ける。名称も同じ。"
+        "属性はバラバラにも書ける。"
       ]
     },
     {
@@ -1526,9 +1526,9 @@
         "id": "zBKODU3XWZAX",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 99
+          "height": 102
         },
-        "outputId": "a903bcc7-cfe1-4986-df23-7f031cd2069e"
+        "outputId": "3767e90d-5300-41fe-9e7f-bb2c7c6f725c"
       },
       "source": [
         "%%html\n",
@@ -1541,7 +1541,7 @@
         "  </g>\n",
         "</svg>"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1560,9 +1560,7 @@
               "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {
-            "tags": []
-          }
+          "metadata": {}
         }
       ]
     },
@@ -1639,28 +1637,28 @@
         "id": "3BN1i-0RgTai",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 99
+          "height": 102
         },
-        "outputId": "ed49318d-7299-434f-f46d-836809757eb7"
+        "outputId": "77c66cf4-d916-4376-bf07-0dece05c00a0"
       },
       "source": [
         "%%html\n",
         "<svg height=\"80\" width=\"300\">\n",
-        "  <g fill=\"none\" stroke=\"black\" stroke-width=\"6\">\n",
+        "  <g fill=\"none\" stroke=\"black\" stroke-width=\"10\">\n",
         "    <path stroke-linecap=\"butt\" d=\"M5 20 l215 0\" />\n",
         "    <path stroke-linecap=\"round\" d=\"M5 40 l215 0\" />\n",
         "    <path stroke-linecap=\"square\" d=\"M5 60 l215 0\" />\n",
         "  </g>\n",
         "</svg>"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "<svg height=\"80\" width=\"300\">\n",
-              "  <g fill=\"none\" stroke=\"black\" stroke-width=\"6\">\n",
+              "  <g fill=\"none\" stroke=\"black\" stroke-width=\"10\">\n",
               "    <path stroke-linecap=\"butt\" d=\"M5 20 l215 0\" />\n",
               "    <path stroke-linecap=\"round\" d=\"M5 40 l215 0\" />\n",
               "    <path stroke-linecap=\"square\" d=\"M5 60 l215 0\" />\n",
@@ -1671,9 +1669,7 @@
               "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {
-            "tags": []
-          }
+          "metadata": {}
         }
       ]
     },
@@ -2401,9 +2397,9 @@
         "id": "G1HU3Iht7GNs",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 521
+          "height": 522
         },
-        "outputId": "5fa028ff-899c-4b78-9b40-53b8a9f8a2a8"
+        "outputId": "277157d7-9b63-4336-f2c0-dff0bcd45162"
       },
       "source": [
         "%%html\n",
@@ -2419,7 +2415,7 @@
         "  Sorry, your browser does not support inline SVG.\n",
         "</svg>\n"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2460,9 +2456,9 @@
         "id": "TB477_Fz7RHa",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 521
+          "height": 522
         },
-        "outputId": "14cee48f-4fcc-4f90-bee1-3b01398a4a0f"
+        "outputId": "2cee898b-11cb-4732-f0c4-5458888dd2b7"
       },
       "source": [
         "%%html\n",
@@ -2480,7 +2476,7 @@
         "  Sorry, your browser does not support inline SVG.  \n",
         "</svg>\n"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2523,9 +2519,9 @@
         "id": "YqPIdhWK7diZ",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 521
+          "height": 522
         },
-        "outputId": "e25ec2fa-a5f3-4dbd-c120-855b5daaac50"
+        "outputId": "d067db99-2d3e-4abd-a13d-0733eccdb9fa"
       },
       "source": [
         "%%html\n",
@@ -2539,7 +2535,7 @@
         "  Sorry, your browser does not support inline SVG.  \n",
         "</svg>\n"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2578,9 +2574,9 @@
         "id": "-09Ucjn77oMj",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 621
+          "height": 622
         },
-        "outputId": "f36e012f-e89c-4832-d4d2-ea0b1e09f364"
+        "outputId": "5fb5a382-1446-4e46-af72-1a00fa90d1b2"
       },
       "source": [
         "%%html\n",
@@ -2597,7 +2593,7 @@
         "  Sorry, your browser does not support inline SVG.\n",
         "</svg>"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3394,7 +3390,7 @@
         "id": "mzmpoynI_sPz"
       },
       "source": [
-        "# inkscape を使う"
+        "# inkscape とか"
       ]
     },
     {
