Colaboratory を使用して作成しました

--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -6,7 +6,7 @@
       "name": "learnelixir.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO3/D4GBl0qc1SGHcmgVdY/",
+      "authorship_tag": "ABX9TyO/i5/v7KC7t4c8jzFgYipC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,7 +75,7 @@
         "!sudo apt update\n",
         "!sudo apt install elixir"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -85,21 +85,23 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ce3cc75f-c088-423a-8418-020ad4a0aa5a"
+        "outputId": "9819de76-beb4-4311-cfea-daabbc218b11"
       },
       "source": [
         "!elixir -v\n",
         "!date"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "/bin/bash: elixir: command not found\n",
-            "Wed Jun  2 00:43:58 UTC 2021\n"
-          ],
-          "name": "stdout"
+            "Erlang/OTP 24 [erts-12.2.1] [source] [64-bit] [smp:2:2] [ds:2:2:10] [async-threads:1] [jit]\n",
+            "\n",
+            "Elixir 1.13.0 (compiled with Erlang/OTP 24)\n",
+            "Sat Mar  5 18:57:58 UTC 2022\n"
+          ]
         }
       ]
     },
@@ -112,7 +114,7 @@
         "---\n",
         "メモ\n",
         "\n",
-        "`!elixir -h` としたらシェルワンライナー `elixir -e` が使えるらしいことがわかった。\n",
+        "`!elixir -h` (ヘルプ)としたらシェルワンライナー `elixir -e` が使えるらしいことがわかった。\n",
         "\n",
         "`iex` というのがインタラクティブ環境なのだが、colab では使いにくいのでとりあえず使わない。"
       ]
@@ -124,21 +126,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a635569f-7c90-45a9-c12d-c634006008ba"
+        "outputId": "107c42aa-d3f0-43fe-a15e-96eabf8b9bd3"
       },
       "source": [
         "!elixir -e 'IO.puts 3 + 3'\n",
         "!elixir -e 'IO.puts \"hello world!\"'"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "6\n",
             "hello world!\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -149,20 +151,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RYCKapxtdtco",
-        "outputId": "705aa589-be9f-4d3b-efe9-4ff2314c576c"
+        "outputId": "808e6f64-d577-43c8-fe1c-dc07ecf30afd"
       },
       "source": [
+        "# 次のようにすればファイルが作れる\n",
         "%%writefile temp.exs\n",
         "IO.puts \"this is a pen.\""
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Writing temp.exs\n"
-          ],
-          "name": "stdout"
+            "Overwriting temp.exs\n"
+          ]
         }
       ]
     },
@@ -173,19 +176,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "06mP6Jy_d505",
-        "outputId": "5a40ac1a-3724-464f-af9c-a7ced42526c0"
+        "outputId": "0719e750-76d4-46f4-fc5c-d8df179222ec"
       },
       "source": [
+        "# ファイルをelixirで実行する\n",
         "!elixir temp.exs"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "this is a pen.\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -212,7 +216,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8452cb2b-0b6f-4bde-c082-1959625ee526"
+        "outputId": "25482b7a-570b-4c6b-92d2-8eafc793c0c3"
       },
       "source": [
         "%%writefile temp.exs\n",
@@ -228,14 +232,14 @@
         "\n",
         "IO.inspect result"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Overwriting temp.exs\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -246,22 +250,22 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "60b05381-bf6f-4a85-b9d0-e74dc8e685e5"
+        "outputId": "e9b750ae-d6dd-4d56-d5e0-28a48d87c072"
       },
       "source": [
         "!elixir temp.exs"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100, 121, 144, 169, 196, 225, 256, 289, 324,\n",
             " 361, 400, 441, 484, 529, 576, 625, 676, 729, 784, 841, 900, 961, 1024, 1089,\n",
             " 1156, 1225, 1296, 1369, 1444, 1521, 1600, 1681, 1764, 1849, 1936, 2025, 2116,\n",
             " 2209, 2304, 2401, 2500, ...]\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -271,7 +275,7 @@
         "id": "d9aiwzGwe_Kn"
       },
       "source": [
-        "上の例で colab 環境で非同期処理が問題なく動く。"
+        "上の例で colab 環境で非同期処理が問題なく動くことが確認できたみたい。"
       ]
     },
     {
@@ -291,7 +295,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Kg0J7hd8pHXP",
-        "outputId": "7a2641ca-fe3d-4c4c-8560-c6644a74bba1"
+        "outputId": "bee5ac09-3b90-434a-e786-a3b799918cc6"
       },
       "source": [
         "%%writefile temp.exs\n",
@@ -305,14 +309,14 @@
         "  {:msg, contents} -> IO.puts contents\n",
         "end"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Writing temp.exs\n"
-          ],
-          "name": "stdout"
+            "Overwriting temp.exs\n"
+          ]
         }
       ]
     },
@@ -323,19 +327,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XWmyBYpEpZ4n",
-        "outputId": "939acc3b-4a87-4d1e-8ff1-4b7cb1990b1d"
+        "outputId": "71865fe1-a34a-4d25-ae28-5285c72cade6"
       },
       "source": [
         "!elixir temp.exs"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "hello world\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -359,7 +363,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5a4af229-255e-40cf-f1c7-e84e251ec0e2"
+        "outputId": "5fe4d217-7fc5-4aa7-e554-57e06c0bb92f"
       },
       "source": [
         "# 実験 とりあえず理解しないでよい。 colab 環境でどうかだけ調べる。\n",
@@ -386,14 +390,14 @@
         "  end\n",
         "end"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Overwriting chain.exs\n"
-          ],
-          "name": "stdout"
+            "Writing chain.exs\n"
+          ]
         }
       ]
     },
@@ -404,19 +408,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "163a2e17-a106-44f8-d9bb-2c09a1decfe4"
+        "outputId": "750cf48f-2acb-4969-f837-90f1b91b342b"
       },
       "source": [
         "!elixir --erl \"+P 1000000\" -r chain.exs  -e \"Chain.run(1_000_000)\""
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "{4896723, \"Result is 1000000\"}\n"
-          ],
-          "name": "stdout"
+            "{4638957, \"Result is 1000000\"}\n"
+          ]
         }
       ]
     },
@@ -447,7 +451,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DfMZdyUImlsG",
-        "outputId": "1cd0682b-2d18-4740-d3d8-761fb278659a"
+        "outputId": "94b47d9c-653d-432b-ea11-6e447b7253d2"
       },
       "source": [
         "%%writefile temp.exs\n",
@@ -455,14 +459,14 @@
         "str = \"helloworld!!!!\"\n",
         "IO.puts str"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Overwriting temp.exs\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -473,19 +477,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qUtHCWc3mtba",
-        "outputId": "1f54fb90-0653-49dd-d1db-7e089d948f6e"
+        "outputId": "bc541e73-d1af-44c5-b783-187eb72ebeb8"
       },
       "source": [
         "!elixir temp.exs"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "helloworld!!!!\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -536,6 +540,15 @@
       "source": [
         "整数型に上限下限 fixed limit はない。 factorial(10000) が計算できる。\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "s0v-JloAeA0Q"
+      }
     },
     {
       "cell_type": "markdown",
