Colaboratory を使用して作成しました

--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -6,7 +6,7 @@
       "name": "learnelixir.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO/i5/v7KC7t4c8jzFgYipC",
+      "authorship_tag": "ABX9TyPSGS7zzfRbw6+k+Gyegy2s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,11 +54,12 @@
         "* https://dev.to/gumi/elixir-01--2585\n",
         "\n",
         "---\n",
-        "古本が手に入った。\n",
+        "本を買った。\n",
         "\n",
         "プログラミング elixir\n",
         "\n",
-        "dave thomas, 笹田耕一・鳥居雪訳、 ohmsha, the pragmatic programmer 1.2: programming elixir\n",
+        "dave thomas, 笹田耕一・鳥居雪訳、 ohmsha\n",
+        "programming elixir |> 1.6\n",
         "\n",
         "を読む。\n",
         "\n"
@@ -366,7 +367,7 @@
         "outputId": "5fe4d217-7fc5-4aa7-e554-57e06c0bb92f"
       },
       "source": [
-        "# 実験 とりあえず理解しないでよい。 colab 環境でどうかだけ調べる。\n",
+        "# 実験 とりあえず理解しない。 colab 環境でどうかだけ調べる。\n",
         "%%writefile chain.exs\n",
         "defmodule Chain do\n",
         "  def counter(next_pid) do\n",
@@ -431,7 +432,11 @@
       },
       "source": [
         "記事 https://ubiteku.oinker.me/2015/12/22/elixir試飲-2-カルチャーショックに戸惑う-並行指向プ/ のマシン Macbook Pro – 3 GHz Intel Core i7, 16GB RAM では 7 秒のところ、colab では 5 秒で終わってるね!!!!\n",
-        "\n"
+        "\n",
+        "手元のwindowsマシン intel core i5-9400 8gb ram でやったら次のようになった。\n",
+        "{3492935, \"Result is 1000000\"}\n",
+        "\n",
+        "あれ、速いじゃん!!!!"
       ]
     },
     {
@@ -538,17 +543,8 @@
         "id": "nOl9SbJnOqdT"
       },
       "source": [
-        "整数型に上限下限 fixed limit はない。 factorial(10000) が計算できる。\n"
+        "整数型に上限下限 fixed limit はない。 factorial(10000) が計算できる。今はしない。\n"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "s0v-JloAeA0Q"
-      }
     },
     {
       "cell_type": "markdown",
@@ -605,21 +601,23 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "113f7ffb-17cf-46cd-a24e-5642d0c0bfc6"
+        "outputId": "4d6e5960-820d-4c90-faa6-d3bc72edb0e3"
       },
       "source": [
         "!elixir -e 'IO.puts 0b1111'\n",
         "!elixir -e 'IO.puts 0o7777'\n",
         "!elixir -e 'IO.puts 0xffff'\n",
         "!echo\n",
+        "# Integer.to_string() と言う関数を使う\n",
         "!elixir -e 'IO.puts \"0b\" <> Integer.to_string(15,2)'\n",
         "!elixir -e 'IO.puts \"0o\" <> Integer.to_string(4095,8)'\n",
         "!elixir -e 'IO.puts \"0x\" <> Integer.to_string(65535,16)'"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "15\n",
             "4095\n",
@@ -628,8 +626,7 @@
             "0b1111\n",
             "0o7777\n",
             "0xFFFF\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -649,22 +646,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fY5OrrP9ogLF",
-        "outputId": "cc737470-9919-4590-ee72-7188f5d403d5"
+        "outputId": "534bdca0-699e-4ca5-e301-e7c89d57ef60"
       },
       "source": [
         "!elixir -e 'IO.puts 1.532e-4'\n",
         "# .0 とか 1. とかはエラーになる\n",
-        "!elixir -e 'IO.puts 98099098.0809898888'"
+        "!elixir -e 'IO.puts 98099098.0809898888'\n",
+        "!elixir -e 'IO.puts 0.00000000000000000000000001' #=> 1.0e-26\n",
+        "!elixir -e 'IO.puts 90000000000000000000000000000000000000000000000000000000'"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "1.532e-4\n",
-            "98099098.08098988\n"
-          ],
-          "name": "stdout"
+            "98099098.08098988\n",
+            "1.0e-26\n",
+            "999999999999999999999999999999999999999\n",
+            "90000000000000000000000000000000000000000000000000000000\n"
+          ]
         }
       ]
     },
@@ -676,7 +678,11 @@
       "source": [
         "文字列 string\n",
         "\n",
-        "string という型はない、みたい。"
+        "string という型はない、みたい。\n",
+        "\n",
+        "質問 型を調べる関数はあるか。type() とか。\n",
+        "\n",
+        "質問 日本語についてはまた別途まとめて勉強する。"
       ]
     },
     {
@@ -715,6 +721,7 @@
       },
       "source": [
         "# 関数に括弧をつけることができる\n",
+        "# \\ で escape できる\n",
         "!elixir -e 'IO.puts (0b1111)'\n",
         "!elixir -e 'IO.puts (\"にほんご\\n日本語\")'\n",
         "!elixir -e \"IO.puts ('にほんご\\n\\\"日本語\\\"')\""
@@ -757,6 +764,24 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`<>` と言う記号はバイナリ連結ということらしい。"
+      ],
+      "metadata": {
+        "id": "Js6Px_xAsOq4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "2QIaKpq9vrlz"
+      }
     },
     {
       "cell_type": "markdown",
